--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <!-- Others -->
     <color name="onboardingCard">#121212</color> <!-- Card-like surface -->
     <color name="transparentWhite">#99FFFFFF</color> <!-- Semi-transparent white -->
+    <color name="colorBackgroundLight">#2A2A2A</color>
 </resources>
