--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -122,21 +122,9 @@
                 android:layout_marginTop="12dp"
                 android:gravity="center_vertical">
 
-                <!-- Circular Progress Bar -->
-                <ProgressBar
-                    android:id="@+id/budget_progress"
-                    style="@android:style/Widget.ProgressBar"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginEnd="16dp"
-                    android:progressDrawable="@drawable/progress_circle"
-                    android:indeterminate="false"
-                    android:max="100" />
-
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
