--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,15 @@
     <color name="transparentWhite">#99FFFFFF</color> <!-- Semi-transparent white -->
     <color name="colorBackgroundLight">#2A2A2A</color>
     <color name="red">#FF0000</color>
+
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+
+    <color name="status_bar_color">#000000</color>
+
 </resources>
