--- a/app/src/main/res/layout/fragment_add_record.xml
+++ b/app/src/main/res/layout/fragment_add_record.xml
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
-                android:text="$400.32"
+                android:text="400.32"
                 android:textColor="@color/colorError"
                 android:textSize="32sp"
                 android:layout_gravity="center"
@@ -154,7 +154,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
-                android:text="$3,400.90"
+                android:text="3400.90"
                 android:textColor="@color/colorAccent"
                 android:textSize="32sp"
                 android:layout_gravity="center"
@@ -228,7 +228,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
-                android:text="$60.21"
+                android:text="60.21"
                 android:textColor="@color/colorPrimary"
                 android:textSize="32sp"
                 android:layout_gravity="center"
